--- a/UIexperiments/Assembly-CSharp-firstpass.csproj
+++ b/UIexperiments/Assembly-CSharp-firstpass.csproj
@@ -55,6 +55,7 @@
      <Compile Include="Assets\Plugins\FMOD\Wrapper\fmod_dsp.cs" />
      <Compile Include="Assets\Plugins\FMOD\Wrapper\fmod_errors.cs" />
      <Compile Include="Assets\Plugins\FMOD\Wrapper\fmod_studio.cs" />
+     <None Include="Assets\StreamingAssets\FMOD_bank_list.txt" />
      <None Include="Assets\Fabric\Revision.txt" />
      <None Include="Assets\Fabric\Readme.txt" />
      <None Include="Assets\Fabric\License.txt" />
